--- a/WebContent/WEB-INF/classes/com/corejsf/messages.properties
+++ b/WebContent/WEB-INF/classes/com/corejsf/messages.properties
@@ -1,4 +1,9 @@
 empName=Employee Name\: 
+logout=Log Out
+editUsers=Edit Users
+newTimesheet=New Timesheet
+viewTimesheets=View Timesheets
+delete=Delete
 userName=UserName
 password=Password
 empNum=Employee Number\: 
